--- a/index.html
+++ b/index.html
@@ -179,6 +179,7 @@ html, body{
  
 /* ===== HOME DASHBOARD UI ===== */ 
 .topbar{ 
+  margin-top:6px; 
   display:flex; 
   align-items:center; 
   justify-content:space-between; 
@@ -267,7 +268,7 @@ html, body{
       <div class="brand-title">ФЕДЕРАЦИЯ</div> 
       <div class="brand-sub">Executive Control • Личный контур</div> 
     </div> 
-</div> 
+  </div> 
  
   <div class="hero"> 
     <div class="hero-row"> 
@@ -310,13 +311,6 @@ html, body{
       <div class="m-label">Задержки</div> 
       <div class="m-val red" id="mDelay">0</div> 
     </div> 
-  </div> 
-<div class="qa" onclick="openQuick('object')">+ Объект</div> 
-    <div class="qa" onclick="openQuick('decision')">+ Решение</div> 
-  </div> 
- 
-  <div class="small-note"> 
-    Главная показывает только сводку. Детали — во вкладках Финансы / Объекты / Календарь / Решения. 
   </div> 
  
 </div> 
