--- a/index.html
+++ b/index.html
@@ -1658,6 +1658,10 @@ function renderFinance(){
 
 } 
 
+// function renderObjects (dup line fixed) 
+
+function renderObjects(){  
+
 let list=document.getElementById("objectList");  
 
 list.innerHTML="";  
@@ -1674,7 +1678,11 @@ list.appendChild(div);
 
 });  
 
+}  
 
+// ); 
+
+// } 
 
 function drawChart(){  
 
@@ -1851,5 +1859,3 @@ recalcHome();
 </body>  
 
 </html> 
-
- 
